# ValidatingInstallation

./: CMakeLists.txt  ServiceChecker.kdev4
.kdev4/: ServiceChecker.kdev4
src/: abstractchecker.h  main.cpp  processchecker.cpp  processchecker.h  servicechecker.cpp  servicechecker.h  tcpsocket.cpp  tcpsocket.h
